--- a/pom.xml
+++ b/pom.xml
@@ -37,4 +37,17 @@
       </plugin>
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+        <id>central</id>
+        <name>a0epgpa25aer2-artifactory-primary-0-releases</name>
+        <url>https://geotest.jfrog.io/artifactory/tjava-local</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>a0epgpa25aer2-artifactory-primary-0-snapshots</name>
+        <url>https://geotest.jfrog.io/artifactory/tjava-local</url>
+    </snapshotRepository>
+</distributionManagement>
 </project>
