--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
     <sonar.organization>javedfaruquee1</sonar.organization>
-    <sonar.host.url>https://sonarcloud.io</sonar.host.ur    
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url> 
   </properties>
 
   <build>
