--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,21 +5,21 @@
 
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
-    schedule:
-      interval: "weekly"
+  #- package-ecosystem: "pip" # See documentation for possible values
+  #  directory: "/" # Location of package manifests
+  #  schedule:
+  #    interval: "weekly"
       
   # Configuration for npm (JavaScript)
-  - package-ecosystem: "npm"
-    directory: "/path/to/npm/project" # Adjust the path to where your package.json and package-lock.json are
-    schedule:
-      interval: "weekly"
-    open-pull-requests-limit: 5
+  #- package-ecosystem: "npm"
+  #  directory: "/path/to/npm/project" # Adjust the path to where your package.json and package-lock.json are
+  #  schedule:
+  #    interval: "weekly"
+  #  open-pull-requests-limit: 5
 
   # Configuration for Maven (Java)
   - package-ecosystem: "maven"
-    directory: "/path/to/maven/project" # Adjust the path to where your pom.xml is
+    directory: "/" # Adjust the path to where your pom.xml is
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 5
