--- a/.github/workflows/frogbot-scan-repository.yml
+++ b/.github/workflows/frogbot-scan-repository.yml
@@ -12,7 +12,7 @@ permissions:
   # id-token: write
 jobs:
   scan-repository:
-    runs-on: windows #mypc 
+    runs-on: windows-self #mypc 
     strategy:
       matrix:
         # The repository scanning will be triggered periodically on the following branches.
