--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -37,6 +37,17 @@ jobs:
         #   fail-on-severity: moderate
         #   deny-licenses: GPL-1.0-or-later, LGPL-2.0-or-later
         #   retry-on-snapshot-warnings: true
+#  renovate:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v4.1.6
+#      - name: Self-hosted Renovate
+#        uses: renovatebot/github-action@v40.1.11
+#        with:
+#          docker-cmd-file: .github/renovate-entrypoint.sh
+#          docker-user: root
+#          token: ${{ secrets.RENOVATE_TOKEN }}
   renovate:
     runs-on: ubuntu-latest
     steps:
@@ -45,6 +56,5 @@ jobs:
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v40.1.11
         with:
-          docker-cmd-file: .github/renovate-entrypoint.sh
-          docker-user: root
-          token: ${{ secrets.RENOVATE_TOKEN }}
+          renovate-image: myproxyhub.domain.com/renovate/renovate
+          token: ${{ secrets.RENOVATE_TOKEN }}          
