--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -24,6 +24,19 @@ permissions:
   pull-requests: write
 
 jobs:
+  renovate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.6
+      - name: Self-hosted Renovate
+        uses: renovatebot/github-action@v40.1.11
+        with:
+          #renovate-image: myproxyhub.domain.com/renovate/renovate
+          renovate-version: 37.356.1
+          token: ${{ secrets.RENOVATE_TOKEN }}          
+        #env:
+        #  RENOVATE_ENDPOINT: "https://git.your-company.com/api/v3"
 #  dependency-review:
 #    runs-on: ubuntu-latest
 #    steps:
@@ -48,15 +61,4 @@ jobs:
 #          docker-cmd-file: .github/renovate-entrypoint.sh
 #          docker-user: root
 #          token: ${{ secrets.RENOVATE_TOKEN }}
-  renovate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.6
-      - name: Self-hosted Renovate
-        uses: renovatebot/github-action@v40.1.11
-        with:
-          renovate-image: myproxyhub.domain.com/renovate/renovate
-          token: ${{ secrets.RENOVATE_TOKEN }}          
-        #env:
-        #  RENOVATE_ENDPOINT: "https://git.your-company.com/api/v3"
+
