--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.6
+      - name: Validate Renovate JSON
+        run: jq type .github/renovate.json        
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v40.1.11
         with:
@@ -39,6 +41,7 @@ jobs:
           token: ${{ secrets.RENOVATE_TOKEN }}          
         env:
           LOG_LEVEL: debug
+          configurationFile: .github/renovate.json          
         #  RENOVATE_ENDPOINT: "https://git.your-company.com/api/v3"
 #  dependency-review:
 #    runs-on: ubuntu-latest
