--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.6
       - name: Validate Renovate JSON
-        run: jq type renovate.json        
+        run: jq type .github/renovate.json      
       - name: Self-hosted Renovate
         uses: renovatebot/github-action@v40.1.11
         with:
