--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   #- package-ecosystem: "pip" # See documentation for possible values
-  #  directory: "/" # Location of package manifests
+  #  directory: "pom.xml" # Location of package manifests
   #  schedule:
   #    interval: "weekly"
       
